2017-03-02  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (struct openvassd_option openvassd_defaults):
	Add port 3389 and Services/irc to non_simult_ports config option,
	suggested by Christian Fischer.

2017-03-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (set_daemon_mode): Call log_config_free in daemon mode
	for the parent process before exit.
	(init_openvassd): Remove dont_fork argument variable, since it is no
	longer required, because the log handler is always set.
	(main): Remove dont_fork variable from the argument list to call
	init_openvassd().

2017-03-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_text_utils.c (nasl_display): Use g_message instead of
	putchar.

2017-03-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (tls1_prf): Remove useless memory allocation
	and improve code style. Free allocated memory in case that md5 or sha1
	result is NULL before leaving the function.

2017-02-28  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto2.c (nasl_aes128_gcm_encrypt)
	(nasl_aes256_gcm_encrypt): New functions.

	* nasl/nasl_crypto2.h: Add new functions prototypes.

	* nasl/nasl_crypto.c (hmac_md5_for_prf)
	(hmac_sha1, tls1_prf, nasl_tls1_prf): New functions.
	(nasl_prf): Add support por for tls1_prf.
	(tls_prf): Add option 2 and 3 for MD5 and SHA1 respectively.

	* nasl/nasl_crypto.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add aes128_gcm_encrypt(),
	aes256_gcm_encrypt() and tls1_prf().

2017-02-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl.c (init): Allocate memory for globals struct.

2017-02-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	*  src/attack.c (attack_network): Check that scheduler was created
	correctly.

	* src/pluginscheduler.c (find_plugins_in_deps, check_dependency_cycles):
	New functions.
	(plugins_scheduler_init): Check for dependency cycles.